@@ -16,6 +16,7 @@ def LOAD_FAST(op):             return dis.opname[op] == 'LOAD_FAST'
 def LOAD_ATTR(op):             return dis.opname[op] == 'LOAD_ATTR'
 def STORE_ATTR(op):            return dis.opname[op] == 'STORE_ATTR'
 def STORE_FAST(op):            return dis.opname[op] == 'STORE_FAST'
+def STORE_NAME(op):            return dis.opname[op] == 'STORE_NAME'
 def STORE_GLOBAL(op):          return dis.opname[op] == 'STORE_GLOBAL'
 def CALL_FUNCTION(op):         return dis.opname[op] == 'CALL_FUNCTION'
 def IMPORT_NAME(op):           return dis.opname[op] == 'IMPORT_NAME'
