@@ -2,4 +2,4 @@ Processing test9...
 
 Warnings...
 
-test_input/test9.py:8 Module (getopt) re-imported locally
+test_input/test9.py:8 Module (getopt) re-imported
