@@ -1,0 +1,19 @@
+"doc"
+
+import string
+import string as nn
+
+used = ''
+_unused = 0
+
+def yyy():
+    import string as jj
+
+if nn.lower('aa') == '':
+    pass
+if string.lower(used) == '':
+    pass
+
+if 1 :
+    _noglobal = 0
+
